@@ -333,6 +333,15 @@ extern void flash_do_write_internal (const uint8_t *p, int nr, const uint8_t *da
 extern const unsigned char *unique_device_id (void);
 extern const uint8_t gnukStringSerial[];
 
+#define LED_ONESHOT_SHORT ((eventmask_t)1)
+#define LED_ONESHOT_LONG  ((eventmask_t)2)
+#define LED_TWOSHOT       ((eventmask_t)4)
+#define LED_STATUS_MODE   ((eventmask_t)8)
+#define LED_INPUT_MODE   ((eventmask_t)16)
+#define LED_FATAL_MODE   ((eventmask_t)32)
+extern Thread *main_thread;
+extern void led_blink (int spec);
+
 #if defined(PINPAD_SUPPORT)
 #if defined(PINPAD_CIR_SUPPORT)
 extern void cir_ext_disable (void);
@@ -349,15 +358,5 @@ extern uint8_t pin_input_buffer[MAX_PIN_CHARS];
 extern uint8_t pin_input_len;
 
 extern int pinpad_getline (int msg_code, systime_t timeout);
-
-#define LED_ONESHOT_SHORT ((eventmask_t)1)
-#define LED_ONESHOT_LONG  ((eventmask_t)2)
-#define LED_TWOSHOT       ((eventmask_t)4)
-#define LED_STATUS_MODE   ((eventmask_t)8)
-#define LED_INPUT_MODE   ((eventmask_t)16)
-#define LED_FATAL_MODE   ((eventmask_t)32)
-extern Thread *main_thread;
-extern void led_blink (int spec);
-
 
 #endif
